--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -83,9 +83,32 @@ table td{
     margin: 14px 0;
     border-radius: 8px;
 }
+
+.logo{
+    height: 20px;
+    width: 20px;
+    transition: all 1s;
+}
+
+.logo:hover{
+    transform: scale(1.5);
+    z-index: 99;
+}
+
+.name{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
 /*RESPONSIVIDADE*/
 
 @media screen and (max-width: 600px){
+
+    .name img{
+        margin-left: 14px;
+    }
+    
     table{
         border: 0;
         
